# commander-builder

./: .gitignore  .pre-commit-config.yaml  .secrets-baseline  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  FUTURE_PLANS.md  HANDOFF_2026-04-26.md  HANDOFF_2026-04-27_afk.md  PROJECT.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: build-desktop.yml  test.yml
docs/: AGENT_BACKLOG.md  CHANGELOG.md  HANDOFF.md  HANDOFF_2026-05-06.md  HANDOFF_2026-05-19.md  PROJECT-MANAGER.md  SECRETS.md  SOAK_RUNBOOK.md  SPEEDUP_TRACK_1.md  STATUS.md  architecture.md  audit_workflow.md  deck-building-resources.md  evaluation_retrospective_2026-04-28.md  fp001-llm-pilot-spike.md  fp001-path-comparison.md  fp001-pathb-handoff.md  fp002-datagen-machine2-briefing.md  fp002-deckgen-plan.md  fp002-margin-analysis.md  fp002-phase4-results-2026-05-30-2158.txt  fp007-plan.md  fp010-plan.md  fp012-next-slices.md  fp013-scope.md  future-plans-action.md  future-plans.md  moxfield-bookmarklet.md  orch-worklist.md  session_state_2026-04-28.md
docs/archive/: HANDOFF.md  PROJECT-MANAGER.md  README.md  orch-worklist.md
packaging/: commander-builder.iss  commander-builder.spec  desktop_entry.py
prompts/: moxfield_audit_v3.md
scripts/: _spike_concurrent_forge.py  analyze_deck_library.py  build_desktop.py  build_fp002_deckset.py  build_installer.py  calibration_check.py  compare_curator_modes.py  detune_deck.py  eval_curator.py  install_git_hooks.py  integration_test_b3.py  make_control_decks.py  margin_analysis.py  merge_soak.py  oracle_diff_report.py  pre_commit_secret_scan.py  preflight_b4_batch.py  publish_soak.ps1  pull_popular_decks.py  recurate_user_decks.py  refresh_card_lists.py  run_fp002_phase4.py  scan_secrets.py  seed_demo_knowledge_log.py  setup_forge_profile.py  setup_machine.ps1  smoketest_compare.py  soak_msg.ps1  soak_pool.py  soak_throughput.py  sync_machine.ps1  verify_forge2.py  verify_forge_pool.py
scripts/experiments/: README.md  _spike_concurrent_forge.py  integration_test_b3.py  preflight_b4_batch.py  run_fp002_phase4.py  smoketest_compare.py  verify_forge2.py  verify_forge_pool.py
setup/forge/: README.md  auto-install.xml  forge.profile.properties  logging.properties
setup/hooks/: pre-commit
src/commander_builder/: __init__.py  _advisor_bracket_peers.py  _advisor_claude.py  _advisor_filters.py  _advisor_heuristic.py  _advisor_logging.py  _advisor_manabase.py  _advisor_models.py  _advisor_role_helpers.py  _card_list_refresh.py  _llm_json.py  _proposer_cli.py  _proposer_filters.py  _proposer_sim.py  _secrets.py  analyst.py  archetype.py  bandit.py  bootstrap.py  bracket_estimator.py  collection.py  combo_detection.py  compare_versions.py  config_store.py  dck_meta.py  dck_utils.py  deck_builder.py  deck_builder_manabase.py  deck_builder_personalize.py  deck_dashboard.py  deck_health.py  deck_library_analyzer.py  desktop.py  doctor.py  edhrec_client.py  export.py  forge_batch.py  forge_cards_loader.py  forge_py_correlation.py  forge_runner.py  (+29 more)
src/commander_builder/data/: __init__.py  oracle_diff_buckets.json
src/commander_builder/web/: __init__.py  __main__.py  _helpers.py  _image_cache.py  app.py  deck_insights.py  deck_pricing.py  deck_text_ops.py  routes_audit.py  routes_cards.py  routes_config.py  routes_dashboard.py  routes_decks.py  routes_library.py  routes_meta.py  routes_oracle.py  routes_rules.py  routes_sim.py
src/commander_builder/web/static/: app.css  app.js  audit_streaming.js  avg_deck_preview.js  deck_health_ui.js  iteration_graph.js  nav.js  settings.js
src/commander_builder/web/templates/: index.html
tests/: conftest.py  test_advisor_logging.py  test_advisor_tribal_bypass.py  test_analyst.py  test_archetype.py  test_avg_deck_preview.py  test_bandit.py  test_bootstrap.py  test_bracket_estimator.py  test_build_fp002_deckset.py  test_build_installer.py  test_bulk_import.py  test_card_image_429_retry.py  test_card_list_refresh.py  test_collection.py  test_combo_detection.py  test_compare_versions.py  test_config_store.py  test_dck_utils.py  test_deck_builder.py  test_deck_builder_manabase.py  test_deck_dashboard.py  test_deck_dir_picker.py  test_deck_health.py  test_deck_library_analyzer.py  test_desktop.py  test_detune_deck.py  test_doctor.py  test_edhrec_categories.py  test_edhrec_client.py  test_edhrec_top.py  test_eval_curator.py  test_export.py  test_forge_cards_loader.py  test_forge_py_correlation.py  test_forge_runner.py  test_forge_script_parser.py  test_game_analyzer.py  test_game_changers.py  test_image_cache.py  (+53 more)
tests/fixtures/: __init__.py  golden_single_commander_build.dck  real_oracles.py
