[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commander-builder"
version = "0.2.0"
description = "Closed-loop MTG Commander deck improvement tool — Forge-validated swap recommendations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [
    { name = "LlamaAdam" }
]
keywords = ["mtg", "commander", "edh", "forge", "deckbuilding"]

# Standard library only for the core. Optional extras opt into network /
# clipboard / LLM backends.
dependencies = []

[project.optional-dependencies]
clipboard = ["pyperclip>=1.8"]
claude = ["anthropic>=0.30"]
web = ["flask>=3.0"]
# Desktop EXE (FP-010): native window via pywebview + PyInstaller freeze.
desktop = ["flask>=3.0", "pywebview>=5.0", "pyinstaller>=6.0"]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyperclip>=1.8",
]

[project.scripts]
# CLI entry points so users can `commander-import ...` instead of
# `python -m commander_builder.moxfield_import ...`. Kept the long forms too
# since they're already documented in PROJECT.md and audit_workflow.md.
commander-import     = "commander_builder.moxfield_import:main"
commander-push       = "commander_builder.moxfield_push:main"
commander-snapshot   = "commander_builder.snapshot_deck:main"
commander-curate     = "commander_builder.pool_curator:main"
commander-match      = "commander_builder.run_match:main"
commander-compare    = "commander_builder.compare_versions:main"
commander-iterate    = "commander_builder.iteration_loop:main"
commander-status     = "commander_builder.status:main"
commander-revert     = "commander_builder.revert_to:main"
commander-doctor     = "commander_builder.doctor:main"
commander-history    = "commander_builder.report:main"
commander-export     = "commander_builder.export:main"
commander-advise     = "commander_builder.improvement_advisor:main"
commander-top        = "commander_builder.edhrec_client:top_main"
commander-combos     = "commander_builder.combo_detection:main"
commander-meta-test  = "commander_builder.meta_test:main"
commander-auto-curate = "commander_builder.proposer:auto_curate_main"
commander-improve     = "commander_builder.improve:improve_main"
commander-oracle-refresh = "commander_builder.oracle_store:main"
commander-bulk-import = "commander_builder.moxfield_import:bulk_main"
commander-config      = "commander_builder._secrets:config_main"
commander-build       = "commander_builder.deck_builder:main"
commander-builder-desktop = "commander_builder.desktop:main"
commander-builder-bootstrap = "commander_builder.bootstrap:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["commander_builder*"]

[tool.setuptools.package-data]
"commander_builder.web" = ["templates/*.html", "static/*.css", "static/*.js"]
"commander_builder.data" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: integration tests that exercise the full advisor or auto-curate pipeline (skipped by default; pass --run-slow to include). See tests/conftest.py for the fast/slow lane policy.",
]
# pytest auto-discovers tests/conftest.py which puts src/ on sys.path even
# without a `pip install -e .`, so the suite runs both ways.
filterwarnings = [
    # tests/test_edhrec_client.py constructs synthetic HTTPError
    # instances (via _make_http_error) to exercise the retry-with-
    # backoff helper. HTTPError inherits from http.client.HTTPResponse
    # which schedules a tempfile-cleanup ResourceWarning on GC even
    # when no real tempfile was used. These warnings are noise — the
    # synthetic errors are deliberately ephemeral, not leaked
    # response objects.
    #
    # Narrow message regex: only suppress the specific
    # "Implicitly cleaning up <HTTPError ...>" pattern. A real
    # SpooledTemporaryFile / _TemporaryFileWrapper leak with a
    # different repr would still surface. Keeps the safety-net
    # intact without false-negatives on actual file leaks.
    "ignore:Implicitly cleaning up <HTTPError:ResourceWarning:tempfile",
]
